--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,7 +7,10 @@ header {
   align-items: center;
   justify-content: center;
   text-align: center;
-  grid-template-columns: 60% 1fr 1fr 0.9fr 1.5fr;
+  grid-template-columns: 50% 1.2fr 1.2fr 1fr 1.3fr;
+  border-bottom: 1.5px solid crimson;
+  border-radius: 1px;
+  padding-bottom: 0.3em;
 }
 
 .rancid-tomatillos {
@@ -20,6 +23,7 @@ header {
 .login-link {
   text-decoration: none;
   color: white;
+  width: 90%;
 }
 
 .header-link:hover, 
@@ -30,7 +34,7 @@ header {
 
 .search-bar {
   border-radius: 1em;
-  background-color: rgba(255, 255, 255, 0.096);
+  background-color: rgba(255, 255, 255, 0.383);
   height: 45%;
   width: 100%;
 }
